Actualizacion final week 6
